Migrate to MariaDB, All Configuration is on MariaDB now.

--- a/Smart/appsettings.json
+++ b/Smart/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "SmartConnection": "Server=IDELLSERVER\\EXPRESS,1433;Database=Smart;User=sa;Password=Jymkatana_6985;MultipleActiveResultSets=true"
+    "SmartConnectionSQL": "Server=(LocalDB)\\MSSQLLocalDB;Database=dbSmart;Trusted_Connection=True;",
+    "SmartConnection": "Server=localhost;User Id=root;Password=Jymkatana_6985;Database=Smart"
   },
   "Logging": {
     "IncludeScopes": false,
