--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.AspNetCore.OWIN" Version="2.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+  </ItemGroup>
+
 </Project>
