First Version Funcional

--- a/Smart/Smart.csproj
+++ b/Smart/Smart.csproj
@@ -16,6 +16,14 @@
     <None Remove="TemplatesRef\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Remove="wwwroot\js\plugin\smartwidgets\JarvisWidget.min.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="wwwroot\js\plugin\smartwidgets\JarvisWidget.min.js" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="6.2.2" />
@@ -47,6 +55,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="wwwroot\js\plugin\smartwidgets\JarvisWidget.min.js" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Update="Templates\RazorPageGenerator\Add.cshtml">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
@@ -67,6 +79,15 @@
     </Content>
     <Content Update="Templates\RazorPageGenerator\List.cshtml">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Update="Views\Shared\Components\BalanceAccount\Default.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Views\Shared\Components\RevenueAccount\Default.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Views\Shared\Components\SummarizeFinancial\Default.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
   </ItemGroup>
 
