--- a/Smart/Properties/launchSettings.json
+++ b/Smart/Properties/launchSettings.json
@@ -8,7 +8,7 @@
     }
   },
   "profiles": {
-    "IIS Express": {
+    "Dev": {
       "commandName": "IISExpress",
       "launchBrowser": true,
       "launchUrl": "https://localhost:44391/",
