--- a/Smart/Smart.csproj
+++ b/Smart/Smart.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Folder Include="DataExemple\" />
     <Folder Include="Migrations\" />
+    <Folder Include="Plugins\" />
   </ItemGroup>
 
   <ItemGroup>
