Correct Header Menu

--- a/Smart/appsettings.json
+++ b/Smart/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
     "SmartConnectionSQL": "Server=(LocalDB)\\MSSQLLocalDB;Database=dbSmart;Trusted_Connection=True;",
-    "SmartConnection": "Server=localhost;User Id=root;Database=Smart"
+    "SmartConnection": "Server=localhost;User Id=root;Password=Jymkatana_6985;Database=Smart"
   },
   "Logging": {
     "IncludeScopes": false,
